--- a/wp-content/themes/aceco/sass/responsive.scss
+++ b/wp-content/themes/aceco/sass/responsive.scss
@@ -456,6 +456,7 @@
 				span {
 					font-size: 21px;
 					line-height: 65px;
+					letter-spacing: 2px;
 
 					&.delivery {
 						margin-left: 54px;
